# Ant-simulation-backend

./: .main.rs  Cargo.toml  Dockerfile  README.md  docker-compose.yml
ant_rust_backend_lib/: Cargo.toml
ant_rust_backend_lib/src/data/handle_req/: handle_request.rs
handle_get_user_data_req/: Cargo.toml  Dockerfile
handle_get_user_data_req/src/: lib.rs  main.rs
handle_get_user_data_req/src/data/: general_func.rs  not_general_func.rs
handle_get_user_data_req/src/data/sql_scripts/: mod.rs
handle_post_del_friend_req/: Cargo.toml  Dockerfile
handle_post_del_friend_req/src/: main.rs
handle_post_del_friend_req/src/data/: general_func.rs  secret_fn.rs  user_struct.rs
handle_post_del_friend_req/src/data/sql_scripts/: delete_script.rs  insert_script.rs  mod.rs
handle_put_del_user_data_req/: Cargo.toml  Dockerfile
handle_put_del_user_data_req/src/: main.rs
handle_put_del_user_data_req/src/data/: mod.rs  not_general_func.rs  secret_fn.rs
handle_put_del_user_data_req/src/data/sql_scripts/: delete_script.rs  mod.rs
handle_signin_req/: Cargo.toml  Dockerfile
handle_signin_req/src/: main.rs
handle_signin_req/src/data/: general_func.rs  secret_fn.rs
handle_signin_req/src/data/sql_scripts/: mod.rs
handle_signup_req/: Cargo.toml  Dockerfile
handle_signup_req/src/: main.rs
handle_signup_req/src/data/: mod.rs  secret_fn.rs
handle_signup_req/src/data/sql_scripts/: mod.rs
rust_runner/: Cargo.toml  Dockerfile
rust_runner/src/: main.rs
rust_runner/src/data/handle_req/: change_access_request.rs  mod.rs
rust_runner/src/data/handle_req/func_used_in_req/: general_func.rs  not_general_func.rs  secret_fn.rs
rust_runner/src/data/sql_scripts/: mod.rs
src/: main.rs
src/data/: mod.rs
src/data/sql_scripts/: create_diag.rs  delete_script.rs  insert_script.rs  mod.rs  select_script.rs  update_script.rs
(+4 files in other folders)
