[package]
edition = "2021"
name = "handle_get_user_data_req"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.2.0"
postgres = "0.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_threadpool_func_bio = "0.0.1"
time = "0.3.34"
validator = {version = "0.15", features = ["derive"]}
